--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
             <version>3.15.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-gelly -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-gelly_2.12</artifactId>
+            <version>1.11.1</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
